testsuite/tests/properties/invalid_lambda_arg_type/take_while_no_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items
        .take_while((e: Int) => e != 0)
        .map((e: Example) => e.as_bare_entity)
}
